# charm-tuning

./: .get_fwd_prop.py.swp  .gitignore  README.md  b3.70_ms0.000_mud-0.022_s32t96.yml  charm-tune.ipynb  corr_lib.py  create-spec.sh  create_tasks.py  interpolate.py  launch-spec.sh  load_data.py  merge_h5.py  plot_corrs.py  plot_settings.py  pyproject.toml  resample.py  spec_xml.py  test_spec_b3.6_m-0.013m0.25_l40t64_nf3p1_cfg_560_QUDA(1).xml  xml_extract.py
templates/: spec_Ds.xml.j2  spec_Ds_0365.xml.j2  spec_Ds_cluster.xml.j2  spec_Ds_multi.xml.j2  spec_cfg11.sh  spec_mix.xml.j2  test_spec.sh.j2  test_spec.xml.j2
